<resources>
    <string name="app_name">Inspector</string>
    <string name="name">Name</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="new_email">Novo e-mail</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="confirm_email">Confirmar Email</string>
    <string name="register">Registrar</string>
    <string name="send">Enviar</string>
    <string name="resend">Reenviar</string>
    <string name="mandatory_default_field">Este campo é obrigatório deve ser preenchido</string>
    <string name="mantaory_email">Por favor insira um email válido</string>
    <string name="mandatory_password">Sua senha deve ter no minimo 6 characterer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="please_verify">Por favor verifique seu e-mail para continuar utilizando a aplicação</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Salvar</string>
    <string name="edit_profile_picture">Editar Foto</string>
    <string name="camera">Câmera</string>
    <string name="gallery">Galeria</string>
    <!--  MENU STINGS-->
    <string name="menu_home">Home</string>
    <string name="menu_my_reports">Meus Relatórios</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_change_email">Trocar E-mail</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_rules">Norma CNEN NN 6.10</string>
    <!--  HOME STRING  -->
    <string name="home_welcomeUser">Bem vindo ao Inspector, %1$s!</string>
    <string name="home_pleaseChoose">Por favor escolha um dos formulários de inspeção abaixo</string>
    <string name="home_control_form">Controle e Monitoração</string>
    <string name="home_room_form">Salas com Fonte de Radiação</string>
    <string name="home_tool_form">Instrumentos de Medição</string>
    <!-- MY REPORTS STRINGS -->
    <string name="tab_control">Controle</string>
    <string name="tab_room">Salas</string>
    <string name="tab_tool">Instrumentos</string>
    <string name="empty_list">Não possui nenhum formulário</string>
    <!-- FOR THE ALL FORMS-->
    <string name="place_name">Local</string>
    <string name="inspected_name">Nome do responsável pelo local</string>
    <string name="date">Data</string>
    <string name="address">Endereço</string>
    <string name="loading">Carregando...</string>
    <!--CONTROL FORM STRINGS -->
    <string name="title_real_condition">Condições reais de operação das instalações</string>
    <string name="work_load">Carga de Trablho</string>
    <string name="usage_factors">Fatores de Uso</string>
    <string name="occupation_factors">Fatores de Ocupação</string>
    <string name="primary_beam_attenuation">Atenuação do feixe primário</string>
    <string name="existing_shields_integrity">Exite integridade das blindagens?</string>
    <string name="application_of_restrictions_regarding_the_use_factor_of_any_primary_barrier">Quais são as aplicação de restrições com relação ao fator de uso de qualquer barreira primária</string>
    <string name="title_measurements_of_radiation_levels">Medições dos níveis de radiação</string>
    <string name="assessment_of_the_adequacy_of_primary_barriers">Avaliação da adequação de barreiras primárias:</string>
    <string name="assessment_of_the_adequacy_of_secondary_barriers">Avaliação da adequação de barreiras secundárias:</string>
    <string name="irradiator_gantry_angulations_most_often_used_in_treatments">Angulações do gantry do irradiador mais frequentemente utilizadas nos tratamentos</string>
    <string name="observations">Observações</string>
    <string name="recommendations_necessary_for_taking_corrective_actions">Recomendações necessárias para a tomada de ações corretivas</string>
    <string name="write_if_you_want">Escreva caso necessário</string>
    <!-- SALAS COM FONTE -->
    <string name="must_owm_fisrt_section">As salas de tratamento devem possuir:</string>
    <string name="security_light">Sinalização luminosa fora da sala, com luz vermelha indicando que o feixe de radiação está ligado ou que a fonte de radiação está exposta, e luz verde indicando que o feixe encontra-se desligado, ou que a fonte de radiação está recolhida em sua blindagem.</string>
    <string name="electronic_device">Dispositivos eletrônicos que possibilitem a observação dos pacientes em condições de tratamento a partir da sala de comando.</string>
    <string name="communicate_device">Dispositivo que possibilite a comunicação oral com o paciente durante o tratamento a partir da sala de comando.</string>
    <string name="open_device">Dispositivo identificado que possibilite a abertura da porta da sala de tratamento pelo lado interno da sala.</string>
    <string name="open_external_device">Dispositivos que possibilitem a abertura da porta da sala, pelo lado externo, no caso de suspensão da energia elétrica.</string>
    <string name="lighting_device">Dispositivos que possibilitem a iluminação interna da sala de tratamento em caso de suspensão da energia elétrica durante o tempo máximo necessário para retirada de pacientes da sala.</string>
    <string name="buttons_should_have">Botões de emergência localizados no painel de controle e, internamente à sala, em sua entrada e, pelo menos, em uma das paredes próximas à fonte de radiação</string>
    <string name="must_owm_second_section">Devem ser afixados em local visível na entrada das salas de tratamento, do laboratório de preparação de material radioativo para uso em braquiterapia de baixa taxa de dose e da sala para armazenamento de fontes de radiação e rejeitos radioativos, os seguintes elementos gráficos:</string>
    <string name="symbol_should_have">Símbolo internacional de presença de radiação ionizante.</string>
    <string name="information_about_source">Informação sobre a fonte de radiação.</string>
    <string name="action_plan">Plano de ação para situação de emergência contendo a identificação dos responsáveis a serem acionados em situação de emergência e seus telefones para contato.</string>
    <!-- SALAS COM FONTE DETALHES-->
    <string name="must_owm_fisrt_section_details">As salas de tratamento deveriam possuir:</string>
    <!-- INTRUMENTAÇÃO DE MEDIDA -->
    <string name="instrusment_form_title">O Serviço de Radioterapia deve dispor dos seguintes instrumentos de medição de grandezas de influência:</string>
    <string name="barometer_resolution">Resolução mínima do barômetro do tipo aneróide</string>
    <string name="thermometer_resolution">Resolução mínima termômetro</string>
    <string name="ruler_resolution">Resolução mínima da régua</string>
    <string name="checkbox_tool_title">Marque quais o  seguintes acessórios para auxiliar a dosimetria de fontes de radiação que o serviço de Radioterapia tem:</string>
    <string name="simulator_dosimetry">Simulador para dosimetria compatível com os feixes de radiação e técnicas de tratamento</string>
    <string name="laser_aligner">Alinhador de laser</string>
    <string name="stability_checker">Verificador de estabilidade e simetria do feixe compatível com os feixes de radiação e técnicas de tratamento, no caso de aceleradores lineares.</string>
    <!-- INSTRUMENTACAO DETALHES-->
    <string name="instrusment_form_title_details">O Serviço de Radioterapia teve os seguintes instrumentos de medição de grandezas de influência:</string>
    <string name="checkbox_tool_title_details">Esses são os seguintes acessórios para auxiliar a dosimetria de fontes de radiação que o serviço de Radioterapia tinha:</string>

    <string-array name="yes_no_array">
        <item>Sim</item>
        <item>Não</item>
    </string-array>

    <string name="detail">Detalhes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
