<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_my_reports"
                android:icon="@drawable/ic_menu_my_reports"
                android:title="@string/menu_my_reports" />
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
        <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_menu_change_password"
                android:title="@string/menu_change_password" />

    </group>
    <item
            android:checkableBehavior="single"
            android:title="Outros">
        <menu>
            <item
                    android:id="@+id/nav_rules"
                    android:icon="@drawable/ic_menu_book"
                    android:title="@string/menu_rules" />
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_exit"
                    android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
