<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.Fragment.Room.RoomListFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:text="Dados Iniciais"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dateRoomTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="true"
                            android:hint="@string/date"
                            android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/placeNameRoomTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/place_name"
                            android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inspectedNameRoomTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/inspected_name"
                            android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/CheckoxesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:divider="?android:listDivider"
                    android:dividerPadding="8dp"
                    android:showDividers="middle" >

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:text="@string/must_owm_fisrt_section"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <CheckBox
                        android:id="@+id/securityLightCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/security_light" />

                <CheckBox
                        android:id="@+id/electronicDeviceCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/electronic_device" />

                <CheckBox
                        android:id="@+id/communicateDeviceCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/communicate_device" />

                <CheckBox
                        android:id="@+id/openDeviceCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/open_device" />

                <CheckBox
                        android:id="@+id/openExtDeviceCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/open_external_device" />

                <CheckBox
                        android:id="@+id/lighthingDeviceCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/lighting_device" />

                <CheckBox
                        android:id="@+id/ButtonsShouldCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/buttons_should_have" />

                <CheckBox
                        android:id="@+id/symbolsCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/symbol_should_have" />

                <CheckBox
                        android:id="@+id/infoCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/information_about_source" />

                <CheckBox
                        android:id="@+id/actionPlanCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/action_plan" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/observations"
                        android:textSize="14sp" />
            </LinearLayout>

            <EditText
                    android:id="@+id/observationRoomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text=" Images"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <LinearLayout
                    android:id="@+id/imagesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/cameraRoomTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_camera_alt_black_24dp"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorPrimary"
                        android:text="@string/camera"
                        android:textSize="18sp" />

                <TextView
                        android:id="@+id/galleryRoomTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_attachment_black_24dp"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorPrimary"
                        android:text="@string/gallery"
                        android:textSize="18sp" />

            </LinearLayout>

            <View
                    android:id="@+id/divider"
                    style="@style/Divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/imagesRoomRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    tools:listitem="@layout/recycler_image_item" />

            <Button
                    android:id="@+id/sendRoomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/send"
                    android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>