<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.inspector.Controller.Fragment.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home">
        <action
                android:id="@+id/action_nav_home_to_controlFormFragment"
                app:destination="@id/controlFormFragment"
                app:enterAnim="@anim/fragment_open_enter"
                app:exitAnim="@anim/fragment_open_exit"
                app:popUpTo="@id/nav_home"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
                android:id="@+id/action_nav_home_to_roomFromFragment"
                app:destination="@id/roomFromFragment"
                app:enterAnim="@anim/fragment_open_enter"
                app:exitAnim="@anim/fragment_open_exit"
                app:popUpTo="@id/nav_home"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
                android:id="@+id/action_nav_home_to_toolFormFragment"
                app:destination="@id/toolFormFragment"
                app:popUpTo="@id/nav_home"
                app:enterAnim="@anim/fragment_open_enter"
                app:exitAnim="@anim/fragment_open_exit"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
            android:id="@+id/nav_my_reports"
            android:name="com.example.inspector.Controller.Fragment.ReportsFragment"
            android:label="@string/menu_my_reports"
            tools:layout="@layout/fragment_my_reports" />

    <fragment
            android:id="@+id/nav_change_password"
            android:name="com.example.inspector.Controller.Fragment.ChangePasswordFragment"
            android:label="@string/menu_change_password"
            tools:layout="@layout/fragment_change_password" />
    <fragment
            android:id="@+id/nav_profile"
            android:name="com.example.inspector.Controller.Fragment.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile" />
    <fragment
            android:id="@+id/controlFormFragment"
            android:name="com.example.inspector.Controller.Fragment.ControlFormFragment"
            android:label="@string/home_control_form"
            tools:layout="@layout/fragment_control_form" />
    <fragment
            android:id="@+id/roomFromFragment"
            android:name="com.example.inspector.Controller.Fragment.RoomFromFragment"
            android:label="@string/home_room_form"
            tools:layout="@layout/fragment_room_from" />
    <fragment
            android:id="@+id/toolFormFragment"
            android:name="com.example.inspector.Controller.Fragment.ToolFormFragment"
            android:label="@string/home_tool_form"
            tools:layout="@layout/fragment_tool_form" />
    <fragment
            android:id="@+id/nav_rules"
            android:name="com.example.inspector.Controller.Fragment.RulesFragment"
            android:label="@string/menu_rules"
            tools:layout="@layout/fragment_rules" />
    <fragment
            android:id="@+id/controlListFragment"
            android:name="com.example.inspector.Controller.Fragment.ControlListFragment"
            android:label="fragment_control_list"
            tools:layout="@layout/fragment_control_list" />
    <fragment
            android:id="@+id/roomListFragment"
            android:name="com.example.inspector.Controller.Fragment.RoomListFragment"
            android:label="fragment_room_list"
            tools:layout="@layout/fragment_room_list" />
    <fragment
            android:id="@+id/toolListFragment"
            android:name="com.example.inspector.Controller.Fragment.ToolListFragment"
            android:label="fragment_tool_list"
            tools:layout="@layout/fragment_tool_list" />
</navigation>